# r-git

./: .gitignore  Cargo.toml  readme.md  smtp_config.sample.toml
src/: main.rs
