[package]
name = "r-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r = { path = "../r" }
anyhow = "1"
tokio = {version = "1", features = ["full"] }
futures = "0.3"
eframe = "0.22"
ringbuf = "0.3"
env_logger = "0.10"
log = "0.4"
regex = "1.9"